Deployment from Statiq

--- a/beacons/monitoring.html
+++ b/beacons/monitoring.html
@@ -199,31 +199,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -367,7 +342,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -375,10 +353,10 @@
                                     <p>Beacon monitoring is quite a bit different than ranging.  Monitoring does not provide distance and has many limitations, but it works in the background.  Monitoring uses beacon regions much like ranging, however, the region is all that is returned in the delegate to protect user privacy
 Monitoring is limited to a maximum of 20 regions on iOS.  On Android &amp; UWP, there currently isn't a limit HOWEVER the BLE scans do emit quite a number of scan packets.  If you have too many, your scan will slow down your app quite a bit.</p>
 <div class="tab-wrap">
-<input type="radio" id="e65cebe6a1a14ce19c36c37b5a45e127-6db18dfe065f40279109a5a9ad0850bd" name="e65cebe6a1a14ce19c36c37b5a45e127" class="tab" checked=""><label for="e65cebe6a1a14ce19c36c37b5a45e127-6db18dfe065f40279109a5a9ad0850bd">General</label>
-<input type="radio" id="e65cebe6a1a14ce19c36c37b5a45e127-ce119f93787c460e99259d19b126ee3a" name="e65cebe6a1a14ce19c36c37b5a45e127" class="tab"><label for="e65cebe6a1a14ce19c36c37b5a45e127-ce119f93787c460e99259d19b126ee3a">Startup</label>
-<input type="radio" id="e65cebe6a1a14ce19c36c37b5a45e127-22c827cd5caa4c5494d8373c65d8f532" name="e65cebe6a1a14ce19c36c37b5a45e127" class="tab"><label for="e65cebe6a1a14ce19c36c37b5a45e127-22c827cd5caa4c5494d8373c65d8f532">Android</label>
-<input type="radio" id="e65cebe6a1a14ce19c36c37b5a45e127-21293d71f93a44189c1b910e0c8c0b78" name="e65cebe6a1a14ce19c36c37b5a45e127" class="tab"><label for="e65cebe6a1a14ce19c36c37b5a45e127-21293d71f93a44189c1b910e0c8c0b78">iOS</label>
+<input type="radio" id="10250d3e7839432bbcff789273edfa80-2b3ce52bfca042fc90d6e7f36899ead0" name="10250d3e7839432bbcff789273edfa80" class="tab" checked=""><label for="10250d3e7839432bbcff789273edfa80-2b3ce52bfca042fc90d6e7f36899ead0">General</label>
+<input type="radio" id="10250d3e7839432bbcff789273edfa80-b5cdffc4671341309d1d4619ebc70be2" name="10250d3e7839432bbcff789273edfa80" class="tab"><label for="10250d3e7839432bbcff789273edfa80-b5cdffc4671341309d1d4619ebc70be2">Startup</label>
+<input type="radio" id="10250d3e7839432bbcff789273edfa80-de9f6ead39824807aaa6d5d960c8f3db" name="10250d3e7839432bbcff789273edfa80" class="tab"><label for="10250d3e7839432bbcff789273edfa80-de9f6ead39824807aaa6d5d960c8f3db">Android</label>
+<input type="radio" id="10250d3e7839432bbcff789273edfa80-e6ac0692a99c4bf388987684a9f25031" name="10250d3e7839432bbcff789273edfa80" class="tab"><label for="10250d3e7839432bbcff789273edfa80-e6ac0692a99c4bf388987684a9f25031">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
