--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="2ed36544d7f64f3f8b3038be62abaf30-747a59fd3483448a9bfa118f5ec8a1ac" name="2ed36544d7f64f3f8b3038be62abaf30" class="tab" checked><label for="2ed36544d7f64f3f8b3038be62abaf30-747a59fd3483448a9bfa118f5ec8a1ac" >General</label>
-<input type="radio" id="2ed36544d7f64f3f8b3038be62abaf30-7dd641b7dced454ab34eb54ff699f476" name="2ed36544d7f64f3f8b3038be62abaf30" class="tab" ><label for="2ed36544d7f64f3f8b3038be62abaf30-7dd641b7dced454ab34eb54ff699f476" >Startup</label>
-<input type="radio" id="2ed36544d7f64f3f8b3038be62abaf30-19d30dc48a9949c096dd53733b574989" name="2ed36544d7f64f3f8b3038be62abaf30" class="tab" ><label for="2ed36544d7f64f3f8b3038be62abaf30-19d30dc48a9949c096dd53733b574989" >Android</label>
-<input type="radio" id="2ed36544d7f64f3f8b3038be62abaf30-615a2e09d2594355b721c1b64301544b" name="2ed36544d7f64f3f8b3038be62abaf30" class="tab" ><label for="2ed36544d7f64f3f8b3038be62abaf30-615a2e09d2594355b721c1b64301544b" >iOS</label>
+<input type="radio" id="4191e3141502495da922c390e5c71e72-f33b5323b661483198d6ce7090e7e625" name="4191e3141502495da922c390e5c71e72" class="tab" checked><label for="4191e3141502495da922c390e5c71e72-f33b5323b661483198d6ce7090e7e625" >General</label>
+<input type="radio" id="4191e3141502495da922c390e5c71e72-f697afd2494a4ca9a994c0b8875960bf" name="4191e3141502495da922c390e5c71e72" class="tab" ><label for="4191e3141502495da922c390e5c71e72-f697afd2494a4ca9a994c0b8875960bf" >Startup</label>
+<input type="radio" id="4191e3141502495da922c390e5c71e72-6d6a960f076a40598fb28fb9c005033e" name="4191e3141502495da922c390e5c71e72" class="tab" ><label for="4191e3141502495da922c390e5c71e72-6d6a960f076a40598fb28fb9c005033e" >Android</label>
+<input type="radio" id="4191e3141502495da922c390e5c71e72-a8dbf85f2d93485c8c050fb15238d011" name="4191e3141502495da922c390e5c71e72" class="tab" ><label for="4191e3141502495da922c390e5c71e72-a8dbf85f2d93485c8c050fb15238d011" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
