--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,16 +344,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b086ced9ed79416492ed746cc2f23a8c-848a4660a6cb4d81a04b7a816fc6eabb" name="b086ced9ed79416492ed746cc2f23a8c" class="tab" checked><label for="b086ced9ed79416492ed746cc2f23a8c-848a4660a6cb4d81a04b7a816fc6eabb" >General</label>
-<input type="radio" id="b086ced9ed79416492ed746cc2f23a8c-d5aa94533fe4473096933fd0a483c18e" name="b086ced9ed79416492ed746cc2f23a8c" class="tab" ><label for="b086ced9ed79416492ed746cc2f23a8c-d5aa94533fe4473096933fd0a483c18e" >Startup</label>
-<input type="radio" id="b086ced9ed79416492ed746cc2f23a8c-618955fdc7274479b21b6593fa8f5a25" name="b086ced9ed79416492ed746cc2f23a8c" class="tab" ><label for="b086ced9ed79416492ed746cc2f23a8c-618955fdc7274479b21b6593fa8f5a25" >Android</label>
-<input type="radio" id="b086ced9ed79416492ed746cc2f23a8c-567337e243c44743b1d13a6463fc2205" name="b086ced9ed79416492ed746cc2f23a8c" class="tab" ><label for="b086ced9ed79416492ed746cc2f23a8c-567337e243c44743b1d13a6463fc2205" >iOS</label>
+<input type="radio" id="f7be13313460489281a1fc901112703f-384aa25a013d4857b3e8512390c0c564" name="f7be13313460489281a1fc901112703f" class="tab" checked><label for="f7be13313460489281a1fc901112703f-384aa25a013d4857b3e8512390c0c564" >General</label>
+<input type="radio" id="f7be13313460489281a1fc901112703f-fbefe628cc5748869b0fe8b6e6764417" name="f7be13313460489281a1fc901112703f" class="tab" ><label for="f7be13313460489281a1fc901112703f-fbefe628cc5748869b0fe8b6e6764417" >Startup</label>
+<input type="radio" id="f7be13313460489281a1fc901112703f-9c29b646e8ff4ed490e401e6b672c0b8" name="f7be13313460489281a1fc901112703f" class="tab" ><label for="f7be13313460489281a1fc901112703f-9c29b646e8ff4ed490e401e6b672c0b8" >Android</label>
+<input type="radio" id="f7be13313460489281a1fc901112703f-bb34a0a47d3b46a8b32c9c826d5a17da" name="f7be13313460489281a1fc901112703f" class="tab" ><label for="f7be13313460489281a1fc901112703f-bb34a0a47d3b46a8b32c9c826d5a17da" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
