--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="43fd7df7b62e4312a56117d6a5a91f35-ee7912ea6ffe457c975406db51262346" name="43fd7df7b62e4312a56117d6a5a91f35" class="tab" checked><label for="43fd7df7b62e4312a56117d6a5a91f35-ee7912ea6ffe457c975406db51262346" >General</label>
-<input type="radio" id="43fd7df7b62e4312a56117d6a5a91f35-86d8d4e15096412bbed85124ae79ab06" name="43fd7df7b62e4312a56117d6a5a91f35" class="tab" ><label for="43fd7df7b62e4312a56117d6a5a91f35-86d8d4e15096412bbed85124ae79ab06" >Startup</label>
-<input type="radio" id="43fd7df7b62e4312a56117d6a5a91f35-3ed2b84764864b90980e16a8f8accf23" name="43fd7df7b62e4312a56117d6a5a91f35" class="tab" ><label for="43fd7df7b62e4312a56117d6a5a91f35-3ed2b84764864b90980e16a8f8accf23" >Android</label>
-<input type="radio" id="43fd7df7b62e4312a56117d6a5a91f35-ac4ba18100044c20a44afe2bf4f0c7e2" name="43fd7df7b62e4312a56117d6a5a91f35" class="tab" ><label for="43fd7df7b62e4312a56117d6a5a91f35-ac4ba18100044c20a44afe2bf4f0c7e2" >iOS</label>
-<input type="radio" id="43fd7df7b62e4312a56117d6a5a91f35-671cc3c99bec467e84a5556f25bf78ad" name="43fd7df7b62e4312a56117d6a5a91f35" class="tab" ><label for="43fd7df7b62e4312a56117d6a5a91f35-671cc3c99bec467e84a5556f25bf78ad" >Windows</label>
+<input type="radio" id="30236f48518c4a9e87e137cfdd1e6aee-11dee1d01ed34fb8beaa853d70bb0ee5" name="30236f48518c4a9e87e137cfdd1e6aee" class="tab" checked><label for="30236f48518c4a9e87e137cfdd1e6aee-11dee1d01ed34fb8beaa853d70bb0ee5" >General</label>
+<input type="radio" id="30236f48518c4a9e87e137cfdd1e6aee-3067b924c82f4a69acdf05b309b6333c" name="30236f48518c4a9e87e137cfdd1e6aee" class="tab" ><label for="30236f48518c4a9e87e137cfdd1e6aee-3067b924c82f4a69acdf05b309b6333c" >Startup</label>
+<input type="radio" id="30236f48518c4a9e87e137cfdd1e6aee-8227788ca3584cfea3e21e33dbd4df34" name="30236f48518c4a9e87e137cfdd1e6aee" class="tab" ><label for="30236f48518c4a9e87e137cfdd1e6aee-8227788ca3584cfea3e21e33dbd4df34" >Android</label>
+<input type="radio" id="30236f48518c4a9e87e137cfdd1e6aee-d8a19d08542749cf9a051ef1ab86c722" name="30236f48518c4a9e87e137cfdd1e6aee" class="tab" ><label for="30236f48518c4a9e87e137cfdd1e6aee-d8a19d08542749cf9a051ef1ab86c722" >iOS</label>
+<input type="radio" id="30236f48518c4a9e87e137cfdd1e6aee-70721e12259b4fa889cdd9990257dc4f" name="30236f48518c4a9e87e137cfdd1e6aee" class="tab" ><label for="30236f48518c4a9e87e137cfdd1e6aee-70721e12259b4fa889cdd9990257dc4f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
