--- a/locations/gps.html
+++ b/locations/gps.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,18 +344,21 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="0ac1f671b05a469f9e5d263891fc6827-14d66200125d4e839aeef34691818b1e" name="0ac1f671b05a469f9e5d263891fc6827" class="tab" checked><label for="0ac1f671b05a469f9e5d263891fc6827-14d66200125d4e839aeef34691818b1e" >General</label>
-<input type="radio" id="0ac1f671b05a469f9e5d263891fc6827-d9cb0e928612416eb31e0edb1e5ebcfe" name="0ac1f671b05a469f9e5d263891fc6827" class="tab" ><label for="0ac1f671b05a469f9e5d263891fc6827-d9cb0e928612416eb31e0edb1e5ebcfe" >Startup</label>
-<input type="radio" id="0ac1f671b05a469f9e5d263891fc6827-ca2da364edfc4f5cb0b10a200467e322" name="0ac1f671b05a469f9e5d263891fc6827" class="tab" ><label for="0ac1f671b05a469f9e5d263891fc6827-ca2da364edfc4f5cb0b10a200467e322" >Android</label>
-<input type="radio" id="0ac1f671b05a469f9e5d263891fc6827-b20f2aadd9044d7194e0b053f6507e0b" name="0ac1f671b05a469f9e5d263891fc6827" class="tab" ><label for="0ac1f671b05a469f9e5d263891fc6827-b20f2aadd9044d7194e0b053f6507e0b" >iOS</label>
-<input type="radio" id="0ac1f671b05a469f9e5d263891fc6827-754a692a98a941ecb662980ab8df78eb" name="0ac1f671b05a469f9e5d263891fc6827" class="tab" ><label for="0ac1f671b05a469f9e5d263891fc6827-754a692a98a941ecb662980ab8df78eb" >Windows</label>
+<input type="radio" id="377ccd9db98c4cfd885c8fa8e531a1ec-04bde243490f454b94c163e25c0be9e6" name="377ccd9db98c4cfd885c8fa8e531a1ec" class="tab" checked><label for="377ccd9db98c4cfd885c8fa8e531a1ec-04bde243490f454b94c163e25c0be9e6" >General</label>
+<input type="radio" id="377ccd9db98c4cfd885c8fa8e531a1ec-ff75204a33644d76ad7410f92cf3db08" name="377ccd9db98c4cfd885c8fa8e531a1ec" class="tab" ><label for="377ccd9db98c4cfd885c8fa8e531a1ec-ff75204a33644d76ad7410f92cf3db08" >Startup</label>
+<input type="radio" id="377ccd9db98c4cfd885c8fa8e531a1ec-3767a88ae88c4e1d82e356d9cbf47382" name="377ccd9db98c4cfd885c8fa8e531a1ec" class="tab" ><label for="377ccd9db98c4cfd885c8fa8e531a1ec-3767a88ae88c4e1d82e356d9cbf47382" >Android</label>
+<input type="radio" id="377ccd9db98c4cfd885c8fa8e531a1ec-05dc38af01a64cf1b4d72aa1b4730987" name="377ccd9db98c4cfd885c8fa8e531a1ec" class="tab" ><label for="377ccd9db98c4cfd885c8fa8e531a1ec-05dc38af01a64cf1b4d72aa1b4730987" >iOS</label>
+<input type="radio" id="377ccd9db98c4cfd885c8fa8e531a1ec-fd8d45102379459c8a127972a65eca01" name="377ccd9db98c4cfd885c8fa8e531a1ec" class="tab" ><label for="377ccd9db98c4cfd885c8fa8e531a1ec-fd8d45102379459c8a127972a65eca01" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
