--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,7 +344,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -384,10 +362,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="70e1d49fea56409eb3de21858d912970-f62d0198edff46e28710d6ff2fa26723" name="70e1d49fea56409eb3de21858d912970" class="tab" checked><label for="70e1d49fea56409eb3de21858d912970-f62d0198edff46e28710d6ff2fa26723" >General</label>
-<input type="radio" id="70e1d49fea56409eb3de21858d912970-fc381e84b98148efaf805f39b7a6b4d3" name="70e1d49fea56409eb3de21858d912970" class="tab" ><label for="70e1d49fea56409eb3de21858d912970-fc381e84b98148efaf805f39b7a6b4d3" >Startup</label>
-<input type="radio" id="70e1d49fea56409eb3de21858d912970-21f158498449467582892e9962002eea" name="70e1d49fea56409eb3de21858d912970" class="tab" ><label for="70e1d49fea56409eb3de21858d912970-21f158498449467582892e9962002eea" >Android</label>
-<input type="radio" id="70e1d49fea56409eb3de21858d912970-0457dc60a2334a73b8605c7b8f274e4f" name="70e1d49fea56409eb3de21858d912970" class="tab" ><label for="70e1d49fea56409eb3de21858d912970-0457dc60a2334a73b8605c7b8f274e4f" >iOS</label>
+<input type="radio" id="07dda4aeab8941888f170ec1217643d5-2586e8c939814b739679f584f8844390" name="07dda4aeab8941888f170ec1217643d5" class="tab" checked><label for="07dda4aeab8941888f170ec1217643d5-2586e8c939814b739679f584f8844390" >General</label>
+<input type="radio" id="07dda4aeab8941888f170ec1217643d5-0c055b0f5fb84c529507d336b3529aac" name="07dda4aeab8941888f170ec1217643d5" class="tab" ><label for="07dda4aeab8941888f170ec1217643d5-0c055b0f5fb84c529507d336b3529aac" >Startup</label>
+<input type="radio" id="07dda4aeab8941888f170ec1217643d5-fae4fdb78b354cbd99c0d214f8137ae1" name="07dda4aeab8941888f170ec1217643d5" class="tab" ><label for="07dda4aeab8941888f170ec1217643d5-fae4fdb78b354cbd99c0d214f8137ae1" >Android</label>
+<input type="radio" id="07dda4aeab8941888f170ec1217643d5-a1e0a1d0b19f4b51b6b4dd1851a5b9bf" name="07dda4aeab8941888f170ec1217643d5" class="tab" ><label for="07dda4aeab8941888f170ec1217643d5-a1e0a1d0b19f4b51b6b4dd1851a5b9bf" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
