--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -199,31 +199,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -367,7 +342,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -376,11 +354,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="621419ad5f2943f5b2f2e277e8c1b686-82b0fa0d7adf4fb19b2e7a47c1f3a0d4" name="621419ad5f2943f5b2f2e277e8c1b686" class="tab" checked=""><label for="621419ad5f2943f5b2f2e277e8c1b686-82b0fa0d7adf4fb19b2e7a47c1f3a0d4">General</label>
-<input type="radio" id="621419ad5f2943f5b2f2e277e8c1b686-df80a2c436734614b2824decce29871a" name="621419ad5f2943f5b2f2e277e8c1b686" class="tab"><label for="621419ad5f2943f5b2f2e277e8c1b686-df80a2c436734614b2824decce29871a">Startup</label>
-<input type="radio" id="621419ad5f2943f5b2f2e277e8c1b686-5be0ea79081b43ab942ccf6e26eb7e47" name="621419ad5f2943f5b2f2e277e8c1b686" class="tab"><label for="621419ad5f2943f5b2f2e277e8c1b686-5be0ea79081b43ab942ccf6e26eb7e47">Android</label>
-<input type="radio" id="621419ad5f2943f5b2f2e277e8c1b686-e6cbc913b84c440c892d24e0cf809a51" name="621419ad5f2943f5b2f2e277e8c1b686" class="tab"><label for="621419ad5f2943f5b2f2e277e8c1b686-e6cbc913b84c440c892d24e0cf809a51">iOS</label>
-<input type="radio" id="621419ad5f2943f5b2f2e277e8c1b686-11ef9f909ee64bac9900c033a8816d94" name="621419ad5f2943f5b2f2e277e8c1b686" class="tab"><label for="621419ad5f2943f5b2f2e277e8c1b686-11ef9f909ee64bac9900c033a8816d94">Windows</label>
+<input type="radio" id="f1881e39b1f848d99fb8e52a4f83b82b-fb0a4db9c37e41829f12d74a3f881c37" name="f1881e39b1f848d99fb8e52a4f83b82b" class="tab" checked=""><label for="f1881e39b1f848d99fb8e52a4f83b82b-fb0a4db9c37e41829f12d74a3f881c37">General</label>
+<input type="radio" id="f1881e39b1f848d99fb8e52a4f83b82b-e2d9feaf7fb84329aa941c8d4a0e4af9" name="f1881e39b1f848d99fb8e52a4f83b82b" class="tab"><label for="f1881e39b1f848d99fb8e52a4f83b82b-e2d9feaf7fb84329aa941c8d4a0e4af9">Startup</label>
+<input type="radio" id="f1881e39b1f848d99fb8e52a4f83b82b-80e6b16ec50d448a823044974d12cd46" name="f1881e39b1f848d99fb8e52a4f83b82b" class="tab"><label for="f1881e39b1f848d99fb8e52a4f83b82b-80e6b16ec50d448a823044974d12cd46">Android</label>
+<input type="radio" id="f1881e39b1f848d99fb8e52a4f83b82b-da50a43008d043cfb32e46d3372c2abf" name="f1881e39b1f848d99fb8e52a4f83b82b" class="tab"><label for="f1881e39b1f848d99fb8e52a4f83b82b-da50a43008d043cfb32e46d3372c2abf">iOS</label>
+<input type="radio" id="f1881e39b1f848d99fb8e52a4f83b82b-690bddeb165145d5accf817b324e13fd" name="f1881e39b1f848d99fb8e52a4f83b82b" class="tab"><label for="f1881e39b1f848d99fb8e52a4f83b82b-690bddeb165145d5accf817b324e13fd">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
