--- a/push/azure.html
+++ b/push/azure.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="926169a5494e4fdfb1b22779b70d2ff6-d524ccabe3d1403d9dc20b7dfd22a502" name="926169a5494e4fdfb1b22779b70d2ff6" class="tab" checked><label for="926169a5494e4fdfb1b22779b70d2ff6-d524ccabe3d1403d9dc20b7dfd22a502" >General</label>
-<input type="radio" id="926169a5494e4fdfb1b22779b70d2ff6-fe4e3b4563dc42109a41a0f7a7a106da" name="926169a5494e4fdfb1b22779b70d2ff6" class="tab" ><label for="926169a5494e4fdfb1b22779b70d2ff6-fe4e3b4563dc42109a41a0f7a7a106da" >Startup</label>
-<input type="radio" id="926169a5494e4fdfb1b22779b70d2ff6-64cfe672768349a9b6a3323d0584696f" name="926169a5494e4fdfb1b22779b70d2ff6" class="tab" ><label for="926169a5494e4fdfb1b22779b70d2ff6-64cfe672768349a9b6a3323d0584696f" >Android</label>
-<input type="radio" id="926169a5494e4fdfb1b22779b70d2ff6-89f7a17981584cd0875400bbaac6d66b" name="926169a5494e4fdfb1b22779b70d2ff6" class="tab" ><label for="926169a5494e4fdfb1b22779b70d2ff6-89f7a17981584cd0875400bbaac6d66b" >iOS</label>
-<input type="radio" id="926169a5494e4fdfb1b22779b70d2ff6-115d4538d6dc428f91d9434826f6f2ea" name="926169a5494e4fdfb1b22779b70d2ff6" class="tab" ><label for="926169a5494e4fdfb1b22779b70d2ff6-115d4538d6dc428f91d9434826f6f2ea" >Windows</label>
+<input type="radio" id="abc21aa422fe4ef8b29a5a9fe9977471-3704acc7ccad4e3a94f5b4cc383e8ec9" name="abc21aa422fe4ef8b29a5a9fe9977471" class="tab" checked><label for="abc21aa422fe4ef8b29a5a9fe9977471-3704acc7ccad4e3a94f5b4cc383e8ec9" >General</label>
+<input type="radio" id="abc21aa422fe4ef8b29a5a9fe9977471-7764ec1559f7442a820e8fb6155f1e83" name="abc21aa422fe4ef8b29a5a9fe9977471" class="tab" ><label for="abc21aa422fe4ef8b29a5a9fe9977471-7764ec1559f7442a820e8fb6155f1e83" >Startup</label>
+<input type="radio" id="abc21aa422fe4ef8b29a5a9fe9977471-b723189a0ca64b43a8dc3e121d0795fb" name="abc21aa422fe4ef8b29a5a9fe9977471" class="tab" ><label for="abc21aa422fe4ef8b29a5a9fe9977471-b723189a0ca64b43a8dc3e121d0795fb" >Android</label>
+<input type="radio" id="abc21aa422fe4ef8b29a5a9fe9977471-7b05756d9e9f4c37a66a050ed54c2706" name="abc21aa422fe4ef8b29a5a9fe9977471" class="tab" ><label for="abc21aa422fe4ef8b29a5a9fe9977471-7b05756d9e9f4c37a66a050ed54c2706" >iOS</label>
+<input type="radio" id="abc21aa422fe4ef8b29a5a9fe9977471-56c4f9d3e049495b8bf51bc96104c85a" name="abc21aa422fe4ef8b29a5a9fe9977471" class="tab" ><label for="abc21aa422fe4ef8b29a5a9fe9977471-56c4f9d3e049495b8bf51bc96104c85a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
