--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,16 +344,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="cb57954d4ef142c1b39b7d032948b569-6356131017074b73b333704643128e7c" name="cb57954d4ef142c1b39b7d032948b569" class="tab" checked><label for="cb57954d4ef142c1b39b7d032948b569-6356131017074b73b333704643128e7c" >General</label>
-<input type="radio" id="cb57954d4ef142c1b39b7d032948b569-3dea60a6bf2847c287cb18f90b518d2c" name="cb57954d4ef142c1b39b7d032948b569" class="tab" ><label for="cb57954d4ef142c1b39b7d032948b569-3dea60a6bf2847c287cb18f90b518d2c" >Startup</label>
-<input type="radio" id="cb57954d4ef142c1b39b7d032948b569-3b737af846884a15ac782b5e2ad1b633" name="cb57954d4ef142c1b39b7d032948b569" class="tab" ><label for="cb57954d4ef142c1b39b7d032948b569-3b737af846884a15ac782b5e2ad1b633" >Android</label>
-<input type="radio" id="cb57954d4ef142c1b39b7d032948b569-54c1b617f8294a2abca977d9d5cb9192" name="cb57954d4ef142c1b39b7d032948b569" class="tab" ><label for="cb57954d4ef142c1b39b7d032948b569-54c1b617f8294a2abca977d9d5cb9192" >iOS</label>
+<input type="radio" id="77dcbfcfc0384d1b8898887e8aa4ea63-2e01e90722fd41b99480a0db0cdd1f30" name="77dcbfcfc0384d1b8898887e8aa4ea63" class="tab" checked><label for="77dcbfcfc0384d1b8898887e8aa4ea63-2e01e90722fd41b99480a0db0cdd1f30" >General</label>
+<input type="radio" id="77dcbfcfc0384d1b8898887e8aa4ea63-bde6da8702d745a3a3f09742efb3d93e" name="77dcbfcfc0384d1b8898887e8aa4ea63" class="tab" ><label for="77dcbfcfc0384d1b8898887e8aa4ea63-bde6da8702d745a3a3f09742efb3d93e" >Startup</label>
+<input type="radio" id="77dcbfcfc0384d1b8898887e8aa4ea63-2437848b305641fe98007ac881dd2721" name="77dcbfcfc0384d1b8898887e8aa4ea63" class="tab" ><label for="77dcbfcfc0384d1b8898887e8aa4ea63-2437848b305641fe98007ac881dd2721" >Android</label>
+<input type="radio" id="77dcbfcfc0384d1b8898887e8aa4ea63-04cc7fc59d5b470b9d74dab97dbb171b" name="77dcbfcfc0384d1b8898887e8aa4ea63" class="tab" ><label for="77dcbfcfc0384d1b8898887e8aa4ea63-04cc7fc59d5b470b9d74dab97dbb171b" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
