--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0aa65b141f754e9e9a4c559b2f969f0b-2e0dc1b449644a1484eb66819ad78aa7" name="0aa65b141f754e9e9a4c559b2f969f0b" class="tab" checked><label for="0aa65b141f754e9e9a4c559b2f969f0b-2e0dc1b449644a1484eb66819ad78aa7" >General</label>
-<input type="radio" id="0aa65b141f754e9e9a4c559b2f969f0b-b6a1b1c21aec4c3cace8dc8ca0fee89e" name="0aa65b141f754e9e9a4c559b2f969f0b" class="tab" ><label for="0aa65b141f754e9e9a4c559b2f969f0b-b6a1b1c21aec4c3cace8dc8ca0fee89e" >Startup</label>
-<input type="radio" id="0aa65b141f754e9e9a4c559b2f969f0b-be999a5aee9d45199ea363ca055e0a25" name="0aa65b141f754e9e9a4c559b2f969f0b" class="tab" ><label for="0aa65b141f754e9e9a4c559b2f969f0b-be999a5aee9d45199ea363ca055e0a25" >Android</label>
-<input type="radio" id="0aa65b141f754e9e9a4c559b2f969f0b-d0b42988c9244289b79db3ac73458b6f" name="0aa65b141f754e9e9a4c559b2f969f0b" class="tab" ><label for="0aa65b141f754e9e9a4c559b2f969f0b-d0b42988c9244289b79db3ac73458b6f" >iOS</label>
-<input type="radio" id="0aa65b141f754e9e9a4c559b2f969f0b-808821d10fc14bac9955a168a40bf820" name="0aa65b141f754e9e9a4c559b2f969f0b" class="tab" ><label for="0aa65b141f754e9e9a4c559b2f969f0b-808821d10fc14bac9955a168a40bf820" >Windows</label>
+<input type="radio" id="abb1566573db4fdfaf13e8a425e7a61a-a858bb3d7ece46c69d3dc477e18a6e9a" name="abb1566573db4fdfaf13e8a425e7a61a" class="tab" checked><label for="abb1566573db4fdfaf13e8a425e7a61a-a858bb3d7ece46c69d3dc477e18a6e9a" >General</label>
+<input type="radio" id="abb1566573db4fdfaf13e8a425e7a61a-230b6f00377e45df88b0c6c89cfb6391" name="abb1566573db4fdfaf13e8a425e7a61a" class="tab" ><label for="abb1566573db4fdfaf13e8a425e7a61a-230b6f00377e45df88b0c6c89cfb6391" >Startup</label>
+<input type="radio" id="abb1566573db4fdfaf13e8a425e7a61a-d6bbacbe474f435090affadc00547368" name="abb1566573db4fdfaf13e8a425e7a61a" class="tab" ><label for="abb1566573db4fdfaf13e8a425e7a61a-d6bbacbe474f435090affadc00547368" >Android</label>
+<input type="radio" id="abb1566573db4fdfaf13e8a425e7a61a-7a6a73a54dbd416197c39ac6f750bb3d" name="abb1566573db4fdfaf13e8a425e7a61a" class="tab" ><label for="abb1566573db4fdfaf13e8a425e7a61a-7a6a73a54dbd416197c39ac6f750bb3d" >iOS</label>
+<input type="radio" id="abb1566573db4fdfaf13e8a425e7a61a-23b3c0f396b7407eb8d2cd819bc6f546" name="abb1566573db4fdfaf13e8a425e7a61a" class="tab" ><label for="abb1566573db4fdfaf13e8a425e7a61a-23b3c0f396b7407eb8d2cd819bc6f546" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
