--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,16 +344,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="067fee19b608422eb4963375ec1c6b0f-a7c920d1fd2b44d1aff9b9649d1dd814" name="067fee19b608422eb4963375ec1c6b0f" class="tab" checked><label for="067fee19b608422eb4963375ec1c6b0f-a7c920d1fd2b44d1aff9b9649d1dd814" >General</label>
-<input type="radio" id="067fee19b608422eb4963375ec1c6b0f-80c68233781545d9bdaf138c89d8967a" name="067fee19b608422eb4963375ec1c6b0f" class="tab" ><label for="067fee19b608422eb4963375ec1c6b0f-80c68233781545d9bdaf138c89d8967a" >Startup</label>
-<input type="radio" id="067fee19b608422eb4963375ec1c6b0f-c450b1c13997450dbed63103d5ab05f7" name="067fee19b608422eb4963375ec1c6b0f" class="tab" ><label for="067fee19b608422eb4963375ec1c6b0f-c450b1c13997450dbed63103d5ab05f7" >Android</label>
-<input type="radio" id="067fee19b608422eb4963375ec1c6b0f-29721854086243f1bac350b9c95fc427" name="067fee19b608422eb4963375ec1c6b0f" class="tab" ><label for="067fee19b608422eb4963375ec1c6b0f-29721854086243f1bac350b9c95fc427" >Windows</label>
+<input type="radio" id="48cee45376af4c2d8bd34b9b13fb6dff-4daa6917582d4b91b9180b56c1244be4" name="48cee45376af4c2d8bd34b9b13fb6dff" class="tab" checked><label for="48cee45376af4c2d8bd34b9b13fb6dff-4daa6917582d4b91b9180b56c1244be4" >General</label>
+<input type="radio" id="48cee45376af4c2d8bd34b9b13fb6dff-772ff11be2504c87988b674681940f9d" name="48cee45376af4c2d8bd34b9b13fb6dff" class="tab" ><label for="48cee45376af4c2d8bd34b9b13fb6dff-772ff11be2504c87988b674681940f9d" >Startup</label>
+<input type="radio" id="48cee45376af4c2d8bd34b9b13fb6dff-a7c2a3dc174b4e3887c75d2832b5cd97" name="48cee45376af4c2d8bd34b9b13fb6dff" class="tab" ><label for="48cee45376af4c2d8bd34b9b13fb6dff-a7c2a3dc174b4e3887c75d2832b5cd97" >Android</label>
+<input type="radio" id="48cee45376af4c2d8bd34b9b13fb6dff-c2f36fde857840d3a4ccc2c52e304188" name="48cee45376af4c2d8bd34b9b13fb6dff" class="tab" ><label for="48cee45376af4c2d8bd34b9b13fb6dff-c2f36fde857840d3a4ccc2c52e304188" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
