--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="df911b9eae374c8a9fec027d18acb1f9-80a8110e985040f0938f883902aa6bb0" name="df911b9eae374c8a9fec027d18acb1f9" class="tab" checked><label for="df911b9eae374c8a9fec027d18acb1f9-80a8110e985040f0938f883902aa6bb0" >General</label>
-<input type="radio" id="df911b9eae374c8a9fec027d18acb1f9-1b313a7f526945f9996bedb012e8121f" name="df911b9eae374c8a9fec027d18acb1f9" class="tab" ><label for="df911b9eae374c8a9fec027d18acb1f9-1b313a7f526945f9996bedb012e8121f" >Startup</label>
-<input type="radio" id="df911b9eae374c8a9fec027d18acb1f9-7ad3b9a644234de5be6bd0e027ef90d1" name="df911b9eae374c8a9fec027d18acb1f9" class="tab" ><label for="df911b9eae374c8a9fec027d18acb1f9-7ad3b9a644234de5be6bd0e027ef90d1" >Android</label>
-<input type="radio" id="df911b9eae374c8a9fec027d18acb1f9-f386647b35e34bb2b55cebb0195e7c03" name="df911b9eae374c8a9fec027d18acb1f9" class="tab" ><label for="df911b9eae374c8a9fec027d18acb1f9-f386647b35e34bb2b55cebb0195e7c03" >iOS</label>
-<input type="radio" id="df911b9eae374c8a9fec027d18acb1f9-1a8acb25f12b43f48e746dfbdbc40bd0" name="df911b9eae374c8a9fec027d18acb1f9" class="tab" ><label for="df911b9eae374c8a9fec027d18acb1f9-1a8acb25f12b43f48e746dfbdbc40bd0" >Windows</label>
+<input type="radio" id="cdd5da692f90414abf4af7b61d39fd6e-e80b924383f5434798ed6ab77339841f" name="cdd5da692f90414abf4af7b61d39fd6e" class="tab" checked><label for="cdd5da692f90414abf4af7b61d39fd6e-e80b924383f5434798ed6ab77339841f" >General</label>
+<input type="radio" id="cdd5da692f90414abf4af7b61d39fd6e-345a69be02824b4d854327cbec8ba0f5" name="cdd5da692f90414abf4af7b61d39fd6e" class="tab" ><label for="cdd5da692f90414abf4af7b61d39fd6e-345a69be02824b4d854327cbec8ba0f5" >Startup</label>
+<input type="radio" id="cdd5da692f90414abf4af7b61d39fd6e-02c7e50a63fe4795bb505f879db8254b" name="cdd5da692f90414abf4af7b61d39fd6e" class="tab" ><label for="cdd5da692f90414abf4af7b61d39fd6e-02c7e50a63fe4795bb505f879db8254b" >Android</label>
+<input type="radio" id="cdd5da692f90414abf4af7b61d39fd6e-5647a7c0ec9b4c6693a2a9460e366f2c" name="cdd5da692f90414abf4af7b61d39fd6e" class="tab" ><label for="cdd5da692f90414abf4af7b61d39fd6e-5647a7c0ec9b4c6693a2a9460e366f2c" >iOS</label>
+<input type="radio" id="cdd5da692f90414abf4af7b61d39fd6e-79529943d3054159ac1d1708378bcf9c" name="cdd5da692f90414abf4af7b61d39fd6e" class="tab" ><label for="cdd5da692f90414abf4af7b61d39fd6e-79529943d3054159ac1d1708378bcf9c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
