--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c0302fda5b724d88b65a6f469d7cba27-396a1e30200c4caaa1735ac83e1dce7b" name="c0302fda5b724d88b65a6f469d7cba27" class="tab" checked><label for="c0302fda5b724d88b65a6f469d7cba27-396a1e30200c4caaa1735ac83e1dce7b" >General</label>
-<input type="radio" id="c0302fda5b724d88b65a6f469d7cba27-41cede5cea874250a0ad57d49d2fdc4b" name="c0302fda5b724d88b65a6f469d7cba27" class="tab" ><label for="c0302fda5b724d88b65a6f469d7cba27-41cede5cea874250a0ad57d49d2fdc4b" >Startup</label>
-<input type="radio" id="c0302fda5b724d88b65a6f469d7cba27-7253ebbf2b724d638733b59cb7b7da0b" name="c0302fda5b724d88b65a6f469d7cba27" class="tab" ><label for="c0302fda5b724d88b65a6f469d7cba27-7253ebbf2b724d638733b59cb7b7da0b" >Android</label>
-<input type="radio" id="c0302fda5b724d88b65a6f469d7cba27-09d281abe9284459a252421d9ac53868" name="c0302fda5b724d88b65a6f469d7cba27" class="tab" ><label for="c0302fda5b724d88b65a6f469d7cba27-09d281abe9284459a252421d9ac53868" >iOS</label>
-<input type="radio" id="c0302fda5b724d88b65a6f469d7cba27-a2e12478836f4fb48772b64cd762ba35" name="c0302fda5b724d88b65a6f469d7cba27" class="tab" ><label for="c0302fda5b724d88b65a6f469d7cba27-a2e12478836f4fb48772b64cd762ba35" >Windows</label>
+<input type="radio" id="7325d3bf164c40319794379a63cdcedb-1b5dc380efee4fbf88bf422196ec6b52" name="7325d3bf164c40319794379a63cdcedb" class="tab" checked><label for="7325d3bf164c40319794379a63cdcedb-1b5dc380efee4fbf88bf422196ec6b52" >General</label>
+<input type="radio" id="7325d3bf164c40319794379a63cdcedb-1b64c49868264e3ab3de875e15ee8c6d" name="7325d3bf164c40319794379a63cdcedb" class="tab" ><label for="7325d3bf164c40319794379a63cdcedb-1b64c49868264e3ab3de875e15ee8c6d" >Startup</label>
+<input type="radio" id="7325d3bf164c40319794379a63cdcedb-3191161fad804246b78d896cadfa973c" name="7325d3bf164c40319794379a63cdcedb" class="tab" ><label for="7325d3bf164c40319794379a63cdcedb-3191161fad804246b78d896cadfa973c" >Android</label>
+<input type="radio" id="7325d3bf164c40319794379a63cdcedb-2b0da72da6fb4f97978b9e359ab355f3" name="7325d3bf164c40319794379a63cdcedb" class="tab" ><label for="7325d3bf164c40319794379a63cdcedb-2b0da72da6fb4f97978b9e359ab355f3" >iOS</label>
+<input type="radio" id="7325d3bf164c40319794379a63cdcedb-20c04181d99c4b92bc157cbb4c6a0847" name="7325d3bf164c40319794379a63cdcedb" class="tab" ><label for="7325d3bf164c40319794379a63cdcedb-20c04181d99c4b92bc157cbb4c6a0847" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
