--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="abce818c624d4821adf3ada4f459c7bb-2f51afdbabc642c0bc0577fc0d5720fd" name="abce818c624d4821adf3ada4f459c7bb" class="tab" checked><label for="abce818c624d4821adf3ada4f459c7bb-2f51afdbabc642c0bc0577fc0d5720fd" >General</label>
-<input type="radio" id="abce818c624d4821adf3ada4f459c7bb-37ff571ebe9144d998f12573690a0b03" name="abce818c624d4821adf3ada4f459c7bb" class="tab" ><label for="abce818c624d4821adf3ada4f459c7bb-37ff571ebe9144d998f12573690a0b03" >Startup</label>
-<input type="radio" id="abce818c624d4821adf3ada4f459c7bb-d6c3308abd964d94ba3f85238fa19057" name="abce818c624d4821adf3ada4f459c7bb" class="tab" ><label for="abce818c624d4821adf3ada4f459c7bb-d6c3308abd964d94ba3f85238fa19057" >Android</label>
-<input type="radio" id="abce818c624d4821adf3ada4f459c7bb-f8b145f96f01443e8cc652514575ce2d" name="abce818c624d4821adf3ada4f459c7bb" class="tab" ><label for="abce818c624d4821adf3ada4f459c7bb-f8b145f96f01443e8cc652514575ce2d" >iOS</label>
-<input type="radio" id="abce818c624d4821adf3ada4f459c7bb-882a51bfd7fe4409b23aa64ed4a82a94" name="abce818c624d4821adf3ada4f459c7bb" class="tab" ><label for="abce818c624d4821adf3ada4f459c7bb-882a51bfd7fe4409b23aa64ed4a82a94" >Windows</label>
+<input type="radio" id="28af7f37bfac45d1a997fc2d846065ce-a1edcc44213541d2a1fefe446a13af30" name="28af7f37bfac45d1a997fc2d846065ce" class="tab" checked><label for="28af7f37bfac45d1a997fc2d846065ce-a1edcc44213541d2a1fefe446a13af30" >General</label>
+<input type="radio" id="28af7f37bfac45d1a997fc2d846065ce-6a6878309255494d97dbcd3ab1422489" name="28af7f37bfac45d1a997fc2d846065ce" class="tab" ><label for="28af7f37bfac45d1a997fc2d846065ce-6a6878309255494d97dbcd3ab1422489" >Startup</label>
+<input type="radio" id="28af7f37bfac45d1a997fc2d846065ce-102146aca9fa47b09e7d6333d68ab2c8" name="28af7f37bfac45d1a997fc2d846065ce" class="tab" ><label for="28af7f37bfac45d1a997fc2d846065ce-102146aca9fa47b09e7d6333d68ab2c8" >Android</label>
+<input type="radio" id="28af7f37bfac45d1a997fc2d846065ce-456b8129179f47d388042259341b9143" name="28af7f37bfac45d1a997fc2d846065ce" class="tab" ><label for="28af7f37bfac45d1a997fc2d846065ce-456b8129179f47d388042259341b9143" >iOS</label>
+<input type="radio" id="28af7f37bfac45d1a997fc2d846065ce-6b9038acef9449beb2cc7797ffff07c6" name="28af7f37bfac45d1a997fc2d846065ce" class="tab" ><label for="28af7f37bfac45d1a997fc2d846065ce-6b9038acef9449beb2cc7797ffff07c6" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
