--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5e03167caccc4f90ae737664eb78e138-125f77ae6b1245299c91a7b7073b1bcd" name="5e03167caccc4f90ae737664eb78e138" class="tab" checked><label for="5e03167caccc4f90ae737664eb78e138-125f77ae6b1245299c91a7b7073b1bcd" >General</label>
-<input type="radio" id="5e03167caccc4f90ae737664eb78e138-9c606b0df8ed4430b63f51f917f6a9d1" name="5e03167caccc4f90ae737664eb78e138" class="tab" ><label for="5e03167caccc4f90ae737664eb78e138-9c606b0df8ed4430b63f51f917f6a9d1" >Startup</label>
-<input type="radio" id="5e03167caccc4f90ae737664eb78e138-cc2acaccd8cf450c8909b21251b6f694" name="5e03167caccc4f90ae737664eb78e138" class="tab" ><label for="5e03167caccc4f90ae737664eb78e138-cc2acaccd8cf450c8909b21251b6f694" >Android</label>
-<input type="radio" id="5e03167caccc4f90ae737664eb78e138-76599fd6792645fea5c38947ff79b775" name="5e03167caccc4f90ae737664eb78e138" class="tab" ><label for="5e03167caccc4f90ae737664eb78e138-76599fd6792645fea5c38947ff79b775" >iOS</label>
-<input type="radio" id="5e03167caccc4f90ae737664eb78e138-f62bd39958ee476e9d248e2909f36cc4" name="5e03167caccc4f90ae737664eb78e138" class="tab" ><label for="5e03167caccc4f90ae737664eb78e138-f62bd39958ee476e9d248e2909f36cc4" >Windows</label>
+<input type="radio" id="e57f1390a42c48ee941d947d826d9e95-d1dd2410e34c4d37ac85c4fae9e32232" name="e57f1390a42c48ee941d947d826d9e95" class="tab" checked><label for="e57f1390a42c48ee941d947d826d9e95-d1dd2410e34c4d37ac85c4fae9e32232" >General</label>
+<input type="radio" id="e57f1390a42c48ee941d947d826d9e95-34ee4a7a143d4f4b870687454201c561" name="e57f1390a42c48ee941d947d826d9e95" class="tab" ><label for="e57f1390a42c48ee941d947d826d9e95-34ee4a7a143d4f4b870687454201c561" >Startup</label>
+<input type="radio" id="e57f1390a42c48ee941d947d826d9e95-ef2635f4f43a4a73a6ab2435c07b14a6" name="e57f1390a42c48ee941d947d826d9e95" class="tab" ><label for="e57f1390a42c48ee941d947d826d9e95-ef2635f4f43a4a73a6ab2435c07b14a6" >Android</label>
+<input type="radio" id="e57f1390a42c48ee941d947d826d9e95-66412a4a3f31486093e5b1d8cbb5edc0" name="e57f1390a42c48ee941d947d826d9e95" class="tab" ><label for="e57f1390a42c48ee941d947d826d9e95-66412a4a3f31486093e5b1d8cbb5edc0" >iOS</label>
+<input type="radio" id="e57f1390a42c48ee941d947d826d9e95-c4991b2e68cf4bdfa2ee2c5f5a23fde5" name="e57f1390a42c48ee941d947d826d9e95" class="tab" ><label for="e57f1390a42c48ee941d947d826d9e95-c4991b2e68cf4bdfa2ee2c5f5a23fde5" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
