--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,16 +344,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="47820b38ae2a45b1b6a0dc45b007e181-7002c0c7abd94da0a41503382f1d0068" name="47820b38ae2a45b1b6a0dc45b007e181" class="tab" checked><label for="47820b38ae2a45b1b6a0dc45b007e181-7002c0c7abd94da0a41503382f1d0068" >General</label>
-<input type="radio" id="47820b38ae2a45b1b6a0dc45b007e181-bf1c81ea449a4df487dc97b9713cb006" name="47820b38ae2a45b1b6a0dc45b007e181" class="tab" ><label for="47820b38ae2a45b1b6a0dc45b007e181-bf1c81ea449a4df487dc97b9713cb006" >Startup</label>
-<input type="radio" id="47820b38ae2a45b1b6a0dc45b007e181-361cd563494b466b80a0fc428ff04480" name="47820b38ae2a45b1b6a0dc45b007e181" class="tab" ><label for="47820b38ae2a45b1b6a0dc45b007e181-361cd563494b466b80a0fc428ff04480" >Android</label>
-<input type="radio" id="47820b38ae2a45b1b6a0dc45b007e181-883eed22310b42758f411a29b0c5970c" name="47820b38ae2a45b1b6a0dc45b007e181" class="tab" ><label for="47820b38ae2a45b1b6a0dc45b007e181-883eed22310b42758f411a29b0c5970c" >iOS</label>
+<input type="radio" id="55112e9d79bc4a9383384eed0b15c02f-0226a0a4dbf645139ca98f444e84ccb6" name="55112e9d79bc4a9383384eed0b15c02f" class="tab" checked><label for="55112e9d79bc4a9383384eed0b15c02f-0226a0a4dbf645139ca98f444e84ccb6" >General</label>
+<input type="radio" id="55112e9d79bc4a9383384eed0b15c02f-ac075ebb9c8b44e2bae055afe7d6ea77" name="55112e9d79bc4a9383384eed0b15c02f" class="tab" ><label for="55112e9d79bc4a9383384eed0b15c02f-ac075ebb9c8b44e2bae055afe7d6ea77" >Startup</label>
+<input type="radio" id="55112e9d79bc4a9383384eed0b15c02f-a724fad3875c4a2c9f10fa37e1d85bf9" name="55112e9d79bc4a9383384eed0b15c02f" class="tab" ><label for="55112e9d79bc4a9383384eed0b15c02f-a724fad3875c4a2c9f10fa37e1d85bf9" >Android</label>
+<input type="radio" id="55112e9d79bc4a9383384eed0b15c02f-abd11c0f7bfe4141be18251172487caf" name="55112e9d79bc4a9383384eed0b15c02f" class="tab" ><label for="55112e9d79bc4a9383384eed0b15c02f-abd11c0f7bfe4141be18251172487caf" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
