--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,15 +344,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1c099fa99e554eb9a2ff30d43fd9fa95-46fa7eec339c486890c76b3c1efaac3b" name="1c099fa99e554eb9a2ff30d43fd9fa95" class="tab" checked><label for="1c099fa99e554eb9a2ff30d43fd9fa95-46fa7eec339c486890c76b3c1efaac3b" >General</label>
-<input type="radio" id="1c099fa99e554eb9a2ff30d43fd9fa95-35c07b63891c4a1d9b8cfd70e736bba0" name="1c099fa99e554eb9a2ff30d43fd9fa95" class="tab" ><label for="1c099fa99e554eb9a2ff30d43fd9fa95-35c07b63891c4a1d9b8cfd70e736bba0" >Startup</label>
-<input type="radio" id="1c099fa99e554eb9a2ff30d43fd9fa95-d619f6047c9e4153b6043c859526f397" name="1c099fa99e554eb9a2ff30d43fd9fa95" class="tab" ><label for="1c099fa99e554eb9a2ff30d43fd9fa95-d619f6047c9e4153b6043c859526f397" >Android</label>
+<input type="radio" id="9accf928474048d7b3f1075b80536d46-b68843d8197a446580ec13886c3b0d97" name="9accf928474048d7b3f1075b80536d46" class="tab" checked><label for="9accf928474048d7b3f1075b80536d46-b68843d8197a446580ec13886c3b0d97" >General</label>
+<input type="radio" id="9accf928474048d7b3f1075b80536d46-2a97e81a309b453e919d156b2a1e2846" name="9accf928474048d7b3f1075b80536d46" class="tab" ><label for="9accf928474048d7b3f1075b80536d46-2a97e81a309b453e919d156b2a1e2846" >Startup</label>
+<input type="radio" id="9accf928474048d7b3f1075b80536d46-f95a2724aa3046548fbde6ebb9f734b8" name="9accf928474048d7b3f1075b80536d46" class="tab" ><label for="9accf928474048d7b3f1075b80536d46-f95a2724aa3046548fbde6ebb9f734b8" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
