--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,7 +344,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -381,11 +359,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="eb6be7b785964837b4f6f6b830d2583b-e85a79751344499b87aed91ea11b3cdc" name="eb6be7b785964837b4f6f6b830d2583b" class="tab" checked><label for="eb6be7b785964837b4f6f6b830d2583b-e85a79751344499b87aed91ea11b3cdc" >General</label>
-<input type="radio" id="eb6be7b785964837b4f6f6b830d2583b-ae10956d66f34d5890fe8a4a7700ea70" name="eb6be7b785964837b4f6f6b830d2583b" class="tab" ><label for="eb6be7b785964837b4f6f6b830d2583b-ae10956d66f34d5890fe8a4a7700ea70" >Startup</label>
-<input type="radio" id="eb6be7b785964837b4f6f6b830d2583b-f1ef4a1318c1465bbc5bcac3f1eafd91" name="eb6be7b785964837b4f6f6b830d2583b" class="tab" ><label for="eb6be7b785964837b4f6f6b830d2583b-f1ef4a1318c1465bbc5bcac3f1eafd91" >Android</label>
-<input type="radio" id="eb6be7b785964837b4f6f6b830d2583b-37ef16fa1a2745b78f52d61057b6085f" name="eb6be7b785964837b4f6f6b830d2583b" class="tab" ><label for="eb6be7b785964837b4f6f6b830d2583b-37ef16fa1a2745b78f52d61057b6085f" >iOS</label>
-<input type="radio" id="eb6be7b785964837b4f6f6b830d2583b-0cf3c799610a48f0a0ee8f15766efe2e" name="eb6be7b785964837b4f6f6b830d2583b" class="tab" ><label for="eb6be7b785964837b4f6f6b830d2583b-0cf3c799610a48f0a0ee8f15766efe2e" >Windows</label></li>
+<input type="radio" id="5f390312b4774eda8c8938c7aac4230c-533aad5ee5034d47a922b62bc0268575" name="5f390312b4774eda8c8938c7aac4230c" class="tab" checked><label for="5f390312b4774eda8c8938c7aac4230c-533aad5ee5034d47a922b62bc0268575" >General</label>
+<input type="radio" id="5f390312b4774eda8c8938c7aac4230c-1096529fedc243a3b49798cfe038f7b9" name="5f390312b4774eda8c8938c7aac4230c" class="tab" ><label for="5f390312b4774eda8c8938c7aac4230c-1096529fedc243a3b49798cfe038f7b9" >Startup</label>
+<input type="radio" id="5f390312b4774eda8c8938c7aac4230c-cd75259bc0464c2498f18691be9e04da" name="5f390312b4774eda8c8938c7aac4230c" class="tab" ><label for="5f390312b4774eda8c8938c7aac4230c-cd75259bc0464c2498f18691be9e04da" >Android</label>
+<input type="radio" id="5f390312b4774eda8c8938c7aac4230c-1b0a4c46c3fa4d2b8062764a3b4186cb" name="5f390312b4774eda8c8938c7aac4230c" class="tab" ><label for="5f390312b4774eda8c8938c7aac4230c-1b0a4c46c3fa4d2b8062764a3b4186cb" >iOS</label>
+<input type="radio" id="5f390312b4774eda8c8938c7aac4230c-f6495ac548a04cecb446ec5be18875e9" name="5f390312b4774eda8c8938c7aac4230c" class="tab" ><label for="5f390312b4774eda8c8938c7aac4230c-f6495ac548a04cecb446ec5be18875e9" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
