--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -199,31 +199,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -367,18 +342,21 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="7c864bad2bb34d80ad5a62b6222acc53-0edb1e52e9014f48afb06543d292da49" name="7c864bad2bb34d80ad5a62b6222acc53" class="tab" checked=""><label for="7c864bad2bb34d80ad5a62b6222acc53-0edb1e52e9014f48afb06543d292da49">General</label>
-<input type="radio" id="7c864bad2bb34d80ad5a62b6222acc53-de3fe4a5e32248d1befffe63d1afe76d" name="7c864bad2bb34d80ad5a62b6222acc53" class="tab"><label for="7c864bad2bb34d80ad5a62b6222acc53-de3fe4a5e32248d1befffe63d1afe76d">Startup</label>
-<input type="radio" id="7c864bad2bb34d80ad5a62b6222acc53-09956b1f0b7749cfa8fdf6729804c2c6" name="7c864bad2bb34d80ad5a62b6222acc53" class="tab"><label for="7c864bad2bb34d80ad5a62b6222acc53-09956b1f0b7749cfa8fdf6729804c2c6">Android</label>
-<input type="radio" id="7c864bad2bb34d80ad5a62b6222acc53-4aaa0279c3b9467fa0884b46a50e49df" name="7c864bad2bb34d80ad5a62b6222acc53" class="tab"><label for="7c864bad2bb34d80ad5a62b6222acc53-4aaa0279c3b9467fa0884b46a50e49df">iOS</label>
-<input type="radio" id="7c864bad2bb34d80ad5a62b6222acc53-d165299bae494857bb055215610e1c22" name="7c864bad2bb34d80ad5a62b6222acc53" class="tab"><label for="7c864bad2bb34d80ad5a62b6222acc53-d165299bae494857bb055215610e1c22">Windows</label>
+<input type="radio" id="f6ef1a6c54ec49118803da53fcce538c-9d54db45510a424f9131aa5db442c7cc" name="f6ef1a6c54ec49118803da53fcce538c" class="tab" checked=""><label for="f6ef1a6c54ec49118803da53fcce538c-9d54db45510a424f9131aa5db442c7cc">General</label>
+<input type="radio" id="f6ef1a6c54ec49118803da53fcce538c-9e8e52e0d1c548988c486d443398081a" name="f6ef1a6c54ec49118803da53fcce538c" class="tab"><label for="f6ef1a6c54ec49118803da53fcce538c-9e8e52e0d1c548988c486d443398081a">Startup</label>
+<input type="radio" id="f6ef1a6c54ec49118803da53fcce538c-f699d25771b641338b1edad4c568d881" name="f6ef1a6c54ec49118803da53fcce538c" class="tab"><label for="f6ef1a6c54ec49118803da53fcce538c-f699d25771b641338b1edad4c568d881">Android</label>
+<input type="radio" id="f6ef1a6c54ec49118803da53fcce538c-ec674514db1c49919b49954cf7995509" name="f6ef1a6c54ec49118803da53fcce538c" class="tab"><label for="f6ef1a6c54ec49118803da53fcce538c-ec674514db1c49919b49954cf7995509">iOS</label>
+<input type="radio" id="f6ef1a6c54ec49118803da53fcce538c-2e7ae4a2cd8e40048037e1d73f135467" name="f6ef1a6c54ec49118803da53fcce538c" class="tab"><label for="f6ef1a6c54ec49118803da53fcce538c-2e7ae4a2cd8e40048037e1d73f135467">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
