--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -199,31 +199,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child active">
@@ -367,17 +342,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c677cdd070a74ad48ec5ae98e40e0b3c-a58dd64964534d6daf9ffe48a5f5576c" name="c677cdd070a74ad48ec5ae98e40e0b3c" class="tab" checked=""><label for="c677cdd070a74ad48ec5ae98e40e0b3c-a58dd64964534d6daf9ffe48a5f5576c">General</label>
-<input type="radio" id="c677cdd070a74ad48ec5ae98e40e0b3c-123ed3fd675744ba99a1841eba7d38cf" name="c677cdd070a74ad48ec5ae98e40e0b3c" class="tab"><label for="c677cdd070a74ad48ec5ae98e40e0b3c-123ed3fd675744ba99a1841eba7d38cf">Startup</label>
-<input type="radio" id="c677cdd070a74ad48ec5ae98e40e0b3c-95a7c0c31eda4c1dac8482bd3178108e" name="c677cdd070a74ad48ec5ae98e40e0b3c" class="tab"><label for="c677cdd070a74ad48ec5ae98e40e0b3c-95a7c0c31eda4c1dac8482bd3178108e">Android</label>
-<input type="radio" id="c677cdd070a74ad48ec5ae98e40e0b3c-458d3b7f46054168b39099ae51c23286" name="c677cdd070a74ad48ec5ae98e40e0b3c" class="tab"><label for="c677cdd070a74ad48ec5ae98e40e0b3c-458d3b7f46054168b39099ae51c23286">iOS</label>
-<input type="radio" id="c677cdd070a74ad48ec5ae98e40e0b3c-88f9035e10984bc3b6a79bf00693c1a2" name="c677cdd070a74ad48ec5ae98e40e0b3c" class="tab"><label for="c677cdd070a74ad48ec5ae98e40e0b3c-88f9035e10984bc3b6a79bf00693c1a2">Windows</label>
+<input type="radio" id="e142157a2a1e44dbbcbf4f5a533a18ce-162c707b81db43c2a166ae7bf2dbd0f4" name="e142157a2a1e44dbbcbf4f5a533a18ce" class="tab" checked=""><label for="e142157a2a1e44dbbcbf4f5a533a18ce-162c707b81db43c2a166ae7bf2dbd0f4">General</label>
+<input type="radio" id="e142157a2a1e44dbbcbf4f5a533a18ce-8a59a41ec545454694add37753e9b555" name="e142157a2a1e44dbbcbf4f5a533a18ce" class="tab"><label for="e142157a2a1e44dbbcbf4f5a533a18ce-8a59a41ec545454694add37753e9b555">Startup</label>
+<input type="radio" id="e142157a2a1e44dbbcbf4f5a533a18ce-24ae7dfd53744fe2ad249feca093ef26" name="e142157a2a1e44dbbcbf4f5a533a18ce" class="tab"><label for="e142157a2a1e44dbbcbf4f5a533a18ce-24ae7dfd53744fe2ad249feca093ef26">Android</label>
+<input type="radio" id="e142157a2a1e44dbbcbf4f5a533a18ce-a22624d3637844c1b54d4db9931a126e" name="e142157a2a1e44dbbcbf4f5a533a18ce" class="tab"><label for="e142157a2a1e44dbbcbf4f5a533a18ce-a22624d3637844c1b54d4db9931a126e">iOS</label>
+<input type="radio" id="e142157a2a1e44dbbcbf4f5a533a18ce-a24834f9a69f4987be43cba9b4aba1ef" name="e142157a2a1e44dbbcbf4f5a533a18ce" class="tab"><label for="e142157a2a1e44dbbcbf4f5a533a18ce-a24834f9a69f4987be43cba9b4aba1ef">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -459,11 +437,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="1d00bf3e7fec46b39e5a1ea65879155e-6a77e6d3a31544b09a0ed7887ee6b5bf" name="1d00bf3e7fec46b39e5a1ea65879155e" class="tab" checked=""><label for="1d00bf3e7fec46b39e5a1ea65879155e-6a77e6d3a31544b09a0ed7887ee6b5bf">General</label>
-<input type="radio" id="1d00bf3e7fec46b39e5a1ea65879155e-63f8ec509ade4fc981714558abf51c2e" name="1d00bf3e7fec46b39e5a1ea65879155e" class="tab"><label for="1d00bf3e7fec46b39e5a1ea65879155e-63f8ec509ade4fc981714558abf51c2e">Startup</label>
-<input type="radio" id="1d00bf3e7fec46b39e5a1ea65879155e-b348aace3ed24adf902918c5d5cb49b1" name="1d00bf3e7fec46b39e5a1ea65879155e" class="tab"><label for="1d00bf3e7fec46b39e5a1ea65879155e-b348aace3ed24adf902918c5d5cb49b1">Android</label>
-<input type="radio" id="1d00bf3e7fec46b39e5a1ea65879155e-78594b4f51b948b7970950912180bdf1" name="1d00bf3e7fec46b39e5a1ea65879155e" class="tab"><label for="1d00bf3e7fec46b39e5a1ea65879155e-78594b4f51b948b7970950912180bdf1">iOS</label>
-<input type="radio" id="1d00bf3e7fec46b39e5a1ea65879155e-113423fd1ecd49fcb0f0fea9abd8f667" name="1d00bf3e7fec46b39e5a1ea65879155e" class="tab"><label for="1d00bf3e7fec46b39e5a1ea65879155e-113423fd1ecd49fcb0f0fea9abd8f667">Windows</label>
+<input type="radio" id="a03989d981de4702a5b34dd47ff8f84b-cd3cdc900f434398b258102577e2298f" name="a03989d981de4702a5b34dd47ff8f84b" class="tab" checked=""><label for="a03989d981de4702a5b34dd47ff8f84b-cd3cdc900f434398b258102577e2298f">General</label>
+<input type="radio" id="a03989d981de4702a5b34dd47ff8f84b-53e9f5325ebc481e950eef4fd8906f2d" name="a03989d981de4702a5b34dd47ff8f84b" class="tab"><label for="a03989d981de4702a5b34dd47ff8f84b-53e9f5325ebc481e950eef4fd8906f2d">Startup</label>
+<input type="radio" id="a03989d981de4702a5b34dd47ff8f84b-6f8928fe535149cb889bf7a7fffbf6e0" name="a03989d981de4702a5b34dd47ff8f84b" class="tab"><label for="a03989d981de4702a5b34dd47ff8f84b-6f8928fe535149cb889bf7a7fffbf6e0">Android</label>
+<input type="radio" id="a03989d981de4702a5b34dd47ff8f84b-c317ecae2b454869979a47edeec6368e" name="a03989d981de4702a5b34dd47ff8f84b" class="tab"><label for="a03989d981de4702a5b34dd47ff8f84b-c317ecae2b454869979a47edeec6368e">iOS</label>
+<input type="radio" id="a03989d981de4702a5b34dd47ff8f84b-6acdc7f494c547afaf38670b80f1a48e" name="a03989d981de4702a5b34dd47ff8f84b" class="tab"><label for="a03989d981de4702a5b34dd47ff8f84b-6acdc7f494c547afaf38670b80f1a48e">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
