--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="fa6b85ad5c9b466898b9fff313bce543-c03056114cd94942b635b8182bd5b528" name="fa6b85ad5c9b466898b9fff313bce543" class="tab" checked><label for="fa6b85ad5c9b466898b9fff313bce543-c03056114cd94942b635b8182bd5b528" >General</label>
-<input type="radio" id="fa6b85ad5c9b466898b9fff313bce543-6abc9d51d70f48dcb168d21036f912cb" name="fa6b85ad5c9b466898b9fff313bce543" class="tab" ><label for="fa6b85ad5c9b466898b9fff313bce543-6abc9d51d70f48dcb168d21036f912cb" >Startup</label>
-<input type="radio" id="fa6b85ad5c9b466898b9fff313bce543-b07eaef020474a7e9d521fe02591e668" name="fa6b85ad5c9b466898b9fff313bce543" class="tab" ><label for="fa6b85ad5c9b466898b9fff313bce543-b07eaef020474a7e9d521fe02591e668" >Android</label>
-<input type="radio" id="fa6b85ad5c9b466898b9fff313bce543-15715329c2b84dd98660efb7d65af3df" name="fa6b85ad5c9b466898b9fff313bce543" class="tab" ><label for="fa6b85ad5c9b466898b9fff313bce543-15715329c2b84dd98660efb7d65af3df" >iOS</label>
-<input type="radio" id="fa6b85ad5c9b466898b9fff313bce543-6a18c43f04d645b3afa42d2aa300f769" name="fa6b85ad5c9b466898b9fff313bce543" class="tab" ><label for="fa6b85ad5c9b466898b9fff313bce543-6a18c43f04d645b3afa42d2aa300f769" >Windows</label>
+<input type="radio" id="43d1cf6d5d364ac88620e8111554aab2-7102d359587b4972912b79e04fb86c8c" name="43d1cf6d5d364ac88620e8111554aab2" class="tab" checked><label for="43d1cf6d5d364ac88620e8111554aab2-7102d359587b4972912b79e04fb86c8c" >General</label>
+<input type="radio" id="43d1cf6d5d364ac88620e8111554aab2-a4e3e8fdfd4743378092ecf023e39b46" name="43d1cf6d5d364ac88620e8111554aab2" class="tab" ><label for="43d1cf6d5d364ac88620e8111554aab2-a4e3e8fdfd4743378092ecf023e39b46" >Startup</label>
+<input type="radio" id="43d1cf6d5d364ac88620e8111554aab2-c6aea046cda04fdf9a0a64e3ee9d8048" name="43d1cf6d5d364ac88620e8111554aab2" class="tab" ><label for="43d1cf6d5d364ac88620e8111554aab2-c6aea046cda04fdf9a0a64e3ee9d8048" >Android</label>
+<input type="radio" id="43d1cf6d5d364ac88620e8111554aab2-0d0bff397d1949dc8802b96bced7a815" name="43d1cf6d5d364ac88620e8111554aab2" class="tab" ><label for="43d1cf6d5d364ac88620e8111554aab2-0d0bff397d1949dc8802b96bced7a815" >iOS</label>
+<input type="radio" id="43d1cf6d5d364ac88620e8111554aab2-45d37cf9625e408891517c973006c875" name="43d1cf6d5d364ac88620e8111554aab2" class="tab" ><label for="43d1cf6d5d364ac88620e8111554aab2-45d37cf9625e408891517c973006c875" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
