--- a/push/firebase.html
+++ b/push/firebase.html
@@ -199,31 +199,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -367,16 +342,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e027b591c1674a0eb90e800b5e3ef27a-af71ddc630f64ae498c562f828e66260" name="e027b591c1674a0eb90e800b5e3ef27a" class="tab" checked=""><label for="e027b591c1674a0eb90e800b5e3ef27a-af71ddc630f64ae498c562f828e66260">General</label>
-<input type="radio" id="e027b591c1674a0eb90e800b5e3ef27a-69f45289a22f4e998c9ced238de5720f" name="e027b591c1674a0eb90e800b5e3ef27a" class="tab"><label for="e027b591c1674a0eb90e800b5e3ef27a-69f45289a22f4e998c9ced238de5720f">Startup</label>
-<input type="radio" id="e027b591c1674a0eb90e800b5e3ef27a-102abaa63b154249b8f23f9468aaa03c" name="e027b591c1674a0eb90e800b5e3ef27a" class="tab"><label for="e027b591c1674a0eb90e800b5e3ef27a-102abaa63b154249b8f23f9468aaa03c">Android</label>
-<input type="radio" id="e027b591c1674a0eb90e800b5e3ef27a-8a0e2fb71ada44d38cd864a7d549d03a" name="e027b591c1674a0eb90e800b5e3ef27a" class="tab"><label for="e027b591c1674a0eb90e800b5e3ef27a-8a0e2fb71ada44d38cd864a7d549d03a">iOS</label>
+<input type="radio" id="43423e2af06b446e983b45e3166e2cad-efe3b81d80f946f0894412487a5f7a92" name="43423e2af06b446e983b45e3166e2cad" class="tab" checked=""><label for="43423e2af06b446e983b45e3166e2cad-efe3b81d80f946f0894412487a5f7a92">General</label>
+<input type="radio" id="43423e2af06b446e983b45e3166e2cad-f77540975f004dcaa39facaa3e895bc5" name="43423e2af06b446e983b45e3166e2cad" class="tab"><label for="43423e2af06b446e983b45e3166e2cad-f77540975f004dcaa39facaa3e895bc5">Startup</label>
+<input type="radio" id="43423e2af06b446e983b45e3166e2cad-6f714b9d94d8456a90fa1a7064a3a31c" name="43423e2af06b446e983b45e3166e2cad" class="tab"><label for="43423e2af06b446e983b45e3166e2cad-6f714b9d94d8456a90fa1a7064a3a31c">Android</label>
+<input type="radio" id="43423e2af06b446e983b45e3166e2cad-7c66e12f7ae24e61b3babc82c099280b" name="43423e2af06b446e983b45e3166e2cad" class="tab"><label for="43423e2af06b446e983b45e3166e2cad-7c66e12f7ae24e61b3babc82c099280b">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
