--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Global Command Exception Handler</title>
+    <title>Shiny.NET - 2.5.0 (Preview)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Global Command Exception Handler</div>
+                                <div class="text-white m-0 title">2.5.0 (Preview)</div>
                             </div>
                         </div>
                     </div>
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -343,7 +318,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -369,28 +344,39 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <pre><code class="language-csharp">public class SampleStartup : FrameworkStartup
-{
-    protected override void Configure(ILoggingBuilder builder, IServiceCollection services)
-    {
-        services.UseGlobalCommandExceptionHandler(x =&gt; {
-            x.AlertType = ErrorAlertType.FullError;
-            x.LocalizeErrorBodyKey = &quot;&quot;;
-            x.LocalizeErrorTitleKey = &quot;&quot;;
-            x.LogError = true;
-        });
-    }
-}
-</code></pre>
+                                    <h2 id="core">Core</h2>
+<ul>
+<li>[BREAKING][Android] Major target is now Android 12</li>
+<li>[Enhancement][Android] Bump all AndroidX libraries to next required version of Android 12 functionality</li>
+<li>[Enhancement] Improved boilerplate 3rd party library generation - now includes FFImageLoading</li>
+<li>[Enhancement] More extension methods (RX SwitchSelect, Task WithTimeout)</li>
+<li>[Enhancement] Internal improvements to repository</li>
+</ul>
+<h2 id="push-firebase">Push (Firebase)</h2>
+<ul>
+<li>[Enhancement][iOS] Push to next major version of iOS firebase libraries</li>
+</ul>
+<h2 id="bluetoothle">BluetoothLE</h2>
+<ul>
+<li>[Fix][Android] Peripheral.ReadRssi not working <a href="https://github.com/shinyorg/shiny/issues/913">GH-913</a></li>
+<li>[Fix] ManagedPeripheral.WhenNotificationReceived was not checking equality properly for all characteristics <a href="https://github.com/shinyorg/shiny/issues/958">GH-958</a></li>
+</ul>
+<h2 id="notifications">Notifications</h2>
+<ul>
+<li>[Enhancement][Android] The notification job is only scheduled when there a scheduled notification</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/framework/exceptions.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v250.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
