--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,17 +344,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6b5f1667481d4f0bba4de56e4003f64f-5cff6ae69b4044b6bc223f5170bb540c" name="6b5f1667481d4f0bba4de56e4003f64f" class="tab" checked><label for="6b5f1667481d4f0bba4de56e4003f64f-5cff6ae69b4044b6bc223f5170bb540c" >General</label>
-<input type="radio" id="6b5f1667481d4f0bba4de56e4003f64f-3122d992e7c84ae48c2049fe02b4e5c5" name="6b5f1667481d4f0bba4de56e4003f64f" class="tab" ><label for="6b5f1667481d4f0bba4de56e4003f64f-3122d992e7c84ae48c2049fe02b4e5c5" >Startup</label>
-<input type="radio" id="6b5f1667481d4f0bba4de56e4003f64f-fdd0203408034413b9f7df6bd3c9477c" name="6b5f1667481d4f0bba4de56e4003f64f" class="tab" ><label for="6b5f1667481d4f0bba4de56e4003f64f-fdd0203408034413b9f7df6bd3c9477c" >Android</label>
-<input type="radio" id="6b5f1667481d4f0bba4de56e4003f64f-3e3e20d7675f4c988eede67345b14a2a" name="6b5f1667481d4f0bba4de56e4003f64f" class="tab" ><label for="6b5f1667481d4f0bba4de56e4003f64f-3e3e20d7675f4c988eede67345b14a2a" >iOS</label>
-<input type="radio" id="6b5f1667481d4f0bba4de56e4003f64f-4e89a75d1e9c4206bbb9eb70b4f8768a" name="6b5f1667481d4f0bba4de56e4003f64f" class="tab" ><label for="6b5f1667481d4f0bba4de56e4003f64f-4e89a75d1e9c4206bbb9eb70b4f8768a" >Windows</label>
+<input type="radio" id="2d71993289aa4b20be02424125320cb8-a60d8763854245d7bafa6584e9aad2ef" name="2d71993289aa4b20be02424125320cb8" class="tab" checked><label for="2d71993289aa4b20be02424125320cb8-a60d8763854245d7bafa6584e9aad2ef" >General</label>
+<input type="radio" id="2d71993289aa4b20be02424125320cb8-799c08841ab74ed098345cb2d7f41e56" name="2d71993289aa4b20be02424125320cb8" class="tab" ><label for="2d71993289aa4b20be02424125320cb8-799c08841ab74ed098345cb2d7f41e56" >Startup</label>
+<input type="radio" id="2d71993289aa4b20be02424125320cb8-d4c87e5155ea43508e80543c8169b680" name="2d71993289aa4b20be02424125320cb8" class="tab" ><label for="2d71993289aa4b20be02424125320cb8-d4c87e5155ea43508e80543c8169b680" >Android</label>
+<input type="radio" id="2d71993289aa4b20be02424125320cb8-7b842a7bb74e416db3a401a73534568c" name="2d71993289aa4b20be02424125320cb8" class="tab" ><label for="2d71993289aa4b20be02424125320cb8-7b842a7bb74e416db3a401a73534568c" >iOS</label>
+<input type="radio" id="2d71993289aa4b20be02424125320cb8-4f68fb481a0040b298603e3b95fb155d" name="2d71993289aa4b20be02424125320cb8" class="tab" ><label for="2d71993289aa4b20be02424125320cb8-4f68fb481a0040b298603e3b95fb155d" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
