--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -201,31 +201,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/viewmodel">ViewModels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/dialogs">Dialogs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/localization">Localization</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/extensions">Extensions</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -369,15 +344,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0142c17eee1345e8b84ad96040060a39-d8a66407dcfe44feb59bcc4c903256d0" name="0142c17eee1345e8b84ad96040060a39" class="tab" checked><label for="0142c17eee1345e8b84ad96040060a39-d8a66407dcfe44feb59bcc4c903256d0" >General</label>
-<input type="radio" id="0142c17eee1345e8b84ad96040060a39-985d2c9ec7dc47c5bc3a031ec947b5e7" name="0142c17eee1345e8b84ad96040060a39" class="tab" ><label for="0142c17eee1345e8b84ad96040060a39-985d2c9ec7dc47c5bc3a031ec947b5e7" >Startup</label>
-<input type="radio" id="0142c17eee1345e8b84ad96040060a39-8be5d59408124bcfbced35770a3abd68" name="0142c17eee1345e8b84ad96040060a39" class="tab" ><label for="0142c17eee1345e8b84ad96040060a39-8be5d59408124bcfbced35770a3abd68" >Android</label>
+<input type="radio" id="89a135ae983347de8c5c11bf26f471da-1232b8f3a8084b0b8a69b75d2e7bee42" name="89a135ae983347de8c5c11bf26f471da" class="tab" checked><label for="89a135ae983347de8c5c11bf26f471da-1232b8f3a8084b0b8a69b75d2e7bee42" >General</label>
+<input type="radio" id="89a135ae983347de8c5c11bf26f471da-f39f391319ea44e3820fa79a03520e53" name="89a135ae983347de8c5c11bf26f471da" class="tab" ><label for="89a135ae983347de8c5c11bf26f471da-f39f391319ea44e3820fa79a03520e53" >Startup</label>
+<input type="radio" id="89a135ae983347de8c5c11bf26f471da-32cdd0a8188e45a090046ba70c2ef85b" name="89a135ae983347de8c5c11bf26f471da" class="tab" ><label for="89a135ae983347de8c5c11bf26f471da-32cdd0a8188e45a090046ba70c2ef85b" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
